@@ -1,6 +1,5 @@
 noinst_DATA =					\
 	PlaylistWindow.glade			\
-	GroupsWindow.glade			\
 	AddWindow.glade				\
 	SkipToWindow.glade			\
 	NoMusicFoundWindow.glade		\
